{{$NEXT}}

0.028     2025-08-20 15:35:36+01:00 Europe/London

    - sendPhoto now passes additional parameters directly through to the API
      rather than only permitting chat_id and photo to go through
    - sendPhoto now actually works with local files, meaning the synopsis
      code now works as intended.
    - fix broken POD

0.027     2024-12-19 19:53:28+00:00 Europe/London

    - handle both chat_member (them) and my_chat_member (us) updates
    - add support for CallbackQuery and InlineKeyboard
    - support for message editing
    - ChatJoinRequest handling, with convenience methods for approve/decline
    - ForceReply support for user commands

0.026     2024-09-02 14:04:35+01:00 Europe/London

    - add support for the chatmember update type
    - add support for the setMyCommands API call

0.025     2024-01-17 17:10:32+00:00 Europe/London

    - add deleteMessage method for deleting messages
    - reply method now passes additional args straight through to sendMessage
    - add support for inline mode
    - enable automatic testing on every push, via GitHub Actions

0.024     2023-10-10 12:41:52+01:00 Europe/London

    - sending messages now warns on errors, but never fails (kk12l) (GH#5)
    - add sendDocument method to send file messages

0.023     2023-08-14 13:18:20+03:00 Europe/Helsinki

	- warn rather than crashing, on an unknown update type
	- add test for this behaviour change
	- change dist.ini to reflect that it's me releasing

0.021     2019-07-01 10:34:13+09:30 Australia/Adelaide

    - Documentation fixes
    - Add some examples

0.020     2019-06-30 22:27:39+09:30 Australia/Adelaide

    - Rework API to better reflect the actual bot API - methods
      now have the same name as the corresponding Telegram ones,
      and make them return the corresponding objects as well.
      This is a breaking change!

0.012     2019-06-28 16:52:52+09:30 Australia/Adelaide

    - add missing dependency
